# ArduinoFake

./: CMakeLists.txt  platformio.ini  script.py
.github/workflows/: check.yaml
src/: SPIFake.cpp  SPIFake.h
src/arduino/: SPI.h
test/: main.cpp  test_context.h  test_spi.h
